--- a/templates/about.html
+++ b/templates/about.html
@@ -3,4 +3,53 @@
 {% block title %} About {% endblock title %}
 
 {% block content %}
+<div class="container" style="margin: 0; padding-bottom: 1rem;">
+    <div class=" row" style="margin: 0;">
+        <div class="col">
+            <div style="margin: 1.5rem;">
+                <img src="https://lh3.googleusercontent.com/drive-viewer/AJc5JmR3AoTCdcAU-EL_F_tZeIX4AxAQH118-tk_tqjPusWHnLgA-IxAPjiLpRVqlUXnoPrlfADstHA=w1366-h643"
+                    class="d-block w-100" style="border-radius: 50%" alt=" ...">
+            </div>
+        </div>
+        <div class="col-8">
+            <div style="margin: 3rem 0;">
+                <h4 style="font-weight: bold; font-size: 2rem">Jordi Bañuelos Méndez</h4>
+                <p style="color:gray; font-style:italic">Full name</p>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div style="margin: 1rem 0;">
+                        <h4 style="font-weight: bold; font-size: 1.5rem">23 years</h4>
+                        <p style="color:gray; font-style:italic">Current Age</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <div style="margin: 1rem 0;">
+                        <h4 style="font-weight: bold; font-size: 1.5rem">Baja California, Mexico</h4>
+                        <p style="color:gray; font-style:italic">Place of Birth</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="padding: 0 2rem">
+        <p style="text-align: justify">Hello, my name is Jordi Bañuelos Mendez. I was born in Tijuana in
+            1999 and have lived in
+            this city
+            my entire life. I'm currently 23 years old and recently finished studying engineering
+            informatics at
+            the Technological Institute of Tijuana (or in spanish, Instituto Tecnológico de
+            Tijuana), where I learned some of the basics in programming and coding in a few
+            platforms
+            and
+            languages like C#, SQL and HTML; however, years have passed and the lack of practice made me
+            lose a lot of knowledge, so this course will definitely help me
+            extend my current
+            knowledge and learn more besides school teachings. There may be a few challenges in my case,
+            like keeping up in understanding english and coding, but
+            hopefully these challenges will definitely help me too.
+        </p>
+    </div>
+</div>
+</div>
 {% endblock content %}
