--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,13 @@
     <title>{% block title %}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/bc86cd6ce2.js" crossorigin="anonymous"></script>
     <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-light">
+<body
+    style="background-image: url('https://images3.alphacoders.com/713/thumb-1920-713080.jpg'); background-size: cover;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}">FSDI 112</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -22,15 +24,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
+                    <a class="nav-link" href="{% url 'post_list' %}">Posts</a>
+                    <a class="nav-link" href="{% url 'post_new' %}">+New</a>
                     <a class="nav-link" href="{% url 'about' %}">About</a>
-                    <a class="nav-link" href="{% url 'posts' %}">Posts</a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="container">
-        {% block content %}
-        {% endblock content %}
+        <div style="background-color:rgba(4, 2, 31, 0.603); margin: 2rem 0; color: white;">
+            <div>
+                {% block content %}
+                {% endblock content %}
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
