--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,49 @@
 {% block title %} Home {% endblock title %}
 
 {% block content %}
-<h1>Home</h1>
-<p>Success! you've reached the Home page</p>
+<div style="text-align:center; padding: 1rem">
+    <h1>Welcome to my Message Board</h1>
+    <h4>Learn how to start using the website with the following introduction</h4>
+</div>
+<div class="container">
+    <div class="row" style="padding-bottom:1rem">
+        <div class="col-4">
+            <div class="card text-center bg-dark">
+                <div class="card-header">
+                    <h5>Posts</h5>
+                </div>
+                <div class="card-body" style="margin-bottom: 5rem;">
+                    <i class="fa-solid fa-file" style="font-size: 70px; margin-bottom: 1rem;"></i>
+                    <p class="card-text">Explore and read the different topics previously added by other visitors! As
+                        soon as its' added, as soon as it will be listed.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-center bg-dark">
+                <div class="card-header">
+                    <h5>New</h5>
+                </div>
+                <div class="card-body" style="margin-bottom: 5rem;">
+                    <i class="fa-solid fa-file-circle-plus" style="font-size: 70px; margin-bottom: 1rem;"></i>
+                    <p class="card-text">Create a new topic and share it with other users so they can read it. No need
+                        to create an account, don't be shy.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <div class="card text-center bg-dark">
+                <div class="card-header">
+                    <h5>About</h5>
+                </div>
+                <div class="card-body" style="margin-bottom: 5rem;">
+                    <i class="fa-solid fa-user" style="font-size: 70px; margin-bottom: 1rem;"></i>
+                    <p class="card-text">Learn more about the author by visiting a page with a partially big mugshot of
+                        him and some background data.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
 {% endblock content %}
