--- a/templates/posts/list.html
+++ b/templates/posts/list.html
@@ -5,15 +5,21 @@
 
 {% block content %}
 <h1>Posts</h1>
-{% for post in post_list %}
-<div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">{{ post.title }}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">{{ post.subtitle }}</h6>
-        <p class="card-text">{{ post.body }}</p>
-        <a href="{% url 'post.detail' post.id %}" class="card-link">Continue reading...</a>
-        <a href="#" class="card-link">Another link</a>
+<div class="container" style="padding-bottom: 1rem;">
+    <div class="row">
+        {% for post in post_list %}
+        <div class="col-4">
+            <div class="card bg-dark" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">{{ post.title }}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ post.subtitle }}</h6>
+                    <p class="card-text">{{ post.body|truncatechars:5000 }}</p>
+                    <a href="{% url 'post_detail' post.id %}" class="card-link">Continue reading...</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
 </div>
-{% endfor %}
+
 {% endblock content %}
